--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Chess Move Calculator</title>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous">
     </head>
     <body>
+        <div class="container">
+            <div class="row" class="instructions">
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <input type="text" name="fen" id="fenStr"><button type="button" id="fenSubmit">submit</button>
+                </div>
+            </div>
+            <div id="valid-move-display" class="row col-md-4 col-md-offset-4">
+            </div>
+        </div>
         <script type="text/javascript" src="app.js" charset="utf-8"></script>
     </body>
 </html>
